[gd_scene load_steps=4 format=3 uid="uid://c2cunjvpu6uoa"]

[ext_resource type="Texture2D" uid="uid://8ifvl8oyqb3u" path="res://Resources/TurnSelector.png" id="1_hl62r"]
[ext_resource type="Script" path="res://Scripts/ChooseDefense.gd" id="1_rhbr8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_umrwd"]
size = Vector2(204, 102)

[node name="Area2D" type="Area2D"]
script = ExtResource("1_rhbr8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_umrwd")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_hl62r")

[node name="Defende Button" type="Button" parent="Sprite2D"]
offset_left = -900.0
offset_top = -250.0
offset_right = -400.0
offset_bottom = 250.0
theme_override_font_sizes/font_size = 50
text = "DEFENDE"

[node name="Cancel Button" type="Button" parent="Sprite2D"]
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
theme_override_font_sizes/font_size = 50
text = "DO NOTHING"

[node name="Special Button" type="Button" parent="Sprite2D"]
offset_left = 400.0
offset_top = -250.0
offset_right = 900.0
offset_bottom = 250.0
theme_override_font_sizes/font_size = 50
text = "USE SPECIAL"

[connection signal="pressed" from="Sprite2D/Defende Button" to="." method="_on_defende_button_pressed"]
[connection signal="pressed" from="Sprite2D/Cancel Button" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="Sprite2D/Special Button" to="." method="_on_special_button_pressed"]
